--- a/style.css
+++ b/style.css
@@ -33,7 +33,24 @@ article{
     text-align: left;
 }
 .artikujt{
-color: rgb(89, 184, 187);
-background-color:rgb(60, 60, 112) ;
+color: rgb(129, 134, 134);
+background-color:antiquewhite;
 
+}
+footer{
+    background-color: antiquewhite;
+    text-align: center;
+    padding: 15px 0;
+    margin-top: 20px;
+}
+footer a{
+    margin: 0 15px;
+    text-decoration: none;
+    color: rgb(161, 105, 133);
+}
+aside{
+    float: right;
+    width: 300px;
+    margin-left: 20px;
+    color: rgb(128, 126, 126);
 }
